Fix gap for sidebar in calypsoify on mobile

--- a/modules/calypsoify/style.scss
+++ b/modules/calypsoify/style.scss
@@ -346,11 +346,11 @@ body,
 
 @media screen and (max-width: 600px) {
   #calypso-sidebar-header {
-    top: 46px;
+    top: 32px;
   }
 
   .auto-fold #adminmenu {
-    top: 46px;
+    top: 32px;
   }
 }
 
